objects/Change_Control_Plan__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control_PlancCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control_Plan_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control Plan Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Change Control Plans</relationshipLabel>
        <relationshipName>Change_Control_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_SME_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan SME Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Control Plan</label>
    <nameField>
        <label>Change Control Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Control Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Prevent_Change_Control_Plan_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; Change_Control__r.Change_Control_Review_Completed__c</errorConditionFormula>
        <errorMessage>No change control plans can be added after Complete Review Change Control.</errorMessage>
    </validationRules>
</CustomObject>